@@ -10,15 +10,13 @@ import library.repositories.CDFineRepository;
 import library.repositories.CDLoanRepository;
 import library.repositories.FineRepository;
 import library.repositories.UserRepository;
-import java.util.List;
 
-/**
- * Manager for handling all notification operations
- * @author Library Team
- * @version 1.0
- */
+import java.util.List;
+import java.util.logging.Logger;
+
 public class NotificationManager {
 
+    private static final Logger LOGGER = Logger.getLogger(NotificationManager.class.getName());
     private static final String SENT_PREFIX = "Sent ";
 
     private CDLoanRepository cdLoanRepository;
@@ -43,78 +41,69 @@ public class NotificationManager {
         this.userRepository = userRepository;
     }
 
-    /**
-     * Send overdue reminders to all users with overdue items
-     * @return number of reminders sent
-     */
+    // ============================================
+    //  Overdue Reminders
+    // ============================================
     public int sendOverdueReminders() {
         List<Loan> overdueBookLoans = loanRepository.findOverdueLoans();
         List<CDLoan> overdueCDLoans = cdLoanRepository.findOverdueCDLoans();
         int sentCount = 0;
 
-        // Send reminders for overdue books
+        // Books
         for (Loan loan : overdueBookLoans) {
             User user = userRepository.findById(loan.getUserId());
             if (user != null && user.isActive()) {
 
                 List<Loan> userOverdueBooks = loanRepository.findByUserId(user.getId())
-                        .stream()
-                        .filter(Loan::isOverdue)
-                        .collect(java.util.stream.Collectors.toList());
+                        .stream().filter(Loan::isOverdue).toList();
 
                 double totalBookFines = fineRepository.findByUserId(user.getId())
-                        .stream()
-                        .filter(fine -> !fine.isPaid())
-                        .mapToDouble(Fine::getRemainingAmount)
-                        .sum();
+                        .stream().filter(f -> !f.isPaid())
+                        .mapToDouble(Fine::getRemainingAmount).sum();
 
                 String message = String.format(
-                        "You have %d overdue book(s).\nTotal book fines: $%.2f\n\nPlease return the items as soon as possible.",
+                        "You have %d overdue book(s).\nTotal book fines: $%.2f\n\nPlease return the items.",
                         userOverdueBooks.size(), totalBookFines
                 );
 
                 if (notificationService.sendEmail(user.getEmail(), "📚 Book Overdue Reminder", message)) {
                     sentCount++;
-                    System.out.println(SENT_PREFIX + "book overdue reminder to: " + user.getEmail());
+                    LOGGER.info(SENT_PREFIX + "book overdue reminder to: " + user.getEmail());
                 }
             }
         }
 
-        // Send reminders for overdue CDs
+        // CDs
         for (CDLoan cdLoan : overdueCDLoans) {
             User user = userRepository.findById(cdLoan.getUserId());
             if (user != null && user.isActive()) {
 
                 List<CDLoan> userOverdueCDs = cdLoanRepository.findByUserId(user.getId())
-                        .stream()
-                        .filter(CDLoan::isOverdue)
-                        .collect(java.util.stream.Collectors.toList());
+                        .stream().filter(CDLoan::isOverdue).toList();
 
                 double totalCDFines = cdFineRepository.findByUserId(user.getId())
-                        .stream()
-                        .filter(fine -> !fine.isPaid())
-                        .mapToDouble(CDFine::getRemainingAmount)
-                        .sum();
+                        .stream().filter(fine -> !fine.isPaid())
+                        .mapToDouble(CDFine::getRemainingAmount).sum();
 
                 String message = String.format(
-                        "You have %d overdue CD(s).\nTotal CD fines: $%.2f\n\nPlease return the items as soon as possible.",
+                        "You have %d overdue CD(s).\nTotal CD fines: $%.2f\n\nPlease return the items.",
                         userOverdueCDs.size(), totalCDFines
                 );
 
                 if (notificationService.sendEmail(user.getEmail(), "💿 CD Overdue Reminder", message)) {
                     sentCount++;
-                    System.out.println(SENT_PREFIX + "CD overdue reminder to: " + user.getEmail());
+                    LOGGER.info(SENT_PREFIX + "CD overdue reminder to: " + user.getEmail());
                 }
             }
         }
 
-        System.out.println(SENT_PREFIX + sentCount + " overdue reminders.");
+        LOGGER.info(SENT_PREFIX + sentCount + " overdue reminders.");
         return sentCount;
     }
 
-    /**
-     * Send combined reminder for users with both books and CDs overdue
-     */
+    // ============================================
+    // Combined Reminders
+    // ============================================
     public int sendCombinedReminders() {
         List<User> allUsers = userRepository.findAll();
         int sentCount = 0;
@@ -123,120 +112,104 @@ public class NotificationManager {
             if (!user.isActive()) continue;
 
             List<Loan> userOverdueBooks = loanRepository.findByUserId(user.getId())
-                    .stream()
-                    .filter(Loan::isOverdue)
-                    .collect(java.util.stream.Collectors.toList());
+                    .stream().filter(Loan::isOverdue).toList();
 
             List<CDLoan> userOverdueCDs = cdLoanRepository.findByUserId(user.getId())
-                    .stream()
-                    .filter(CDLoan::isOverdue)
-                    .collect(java.util.stream.Collectors.toList());
+                    .stream().filter(CDLoan::isOverdue).toList();
 
-            if (!userOverdueBooks.isEmpty() || !userOverdueCDs.isEmpty()) {
+            if (userOverdueBooks.isEmpty() && userOverdueCDs.isEmpty()) continue;
 
-                double totalBookFines = fineRepository.findByUserId(user.getId())
-                        .stream()
-                        .filter(fine -> !fine.isPaid())
-                        .mapToDouble(Fine::getRemainingAmount)
-                        .sum();
+            double totalBookFines = fineRepository.findByUserId(user.getId())
+                    .stream().filter(f -> !f.isPaid())
+                    .mapToDouble(Fine::getRemainingAmount).sum();
 
-                double totalCDFines = cdFineRepository.findByUserId(user.getId())
-                        .stream()
-                        .filter(fine -> !fine.isPaid())
-                        .mapToDouble(CDFine::getRemainingAmount)
-                        .sum();
+            double totalCDFines = cdFineRepository.findByUserId(user.getId())
+                    .stream().filter(f -> !f.isPaid())
+                    .mapToDouble(CDFine::getRemainingAmount).sum();
 
-                double totalFines = totalBookFines + totalCDFines;
+            double totalFines = totalBookFines + totalCDFines;
 
-                String message = String.format(
-                        "Dear %s,\n\nYou have:\n" +
-                                "- %d overdue book(s)\n" +
-                                "- %d overdue CD(s)\n" +
-                                "Total fines: $%.2f\n\n" +
-                                "Please return the items as soon as possible to avoid additional charges.\n\n" +
-                                "Best regards,\nLibrary Management System",
-                        user.getName(),
-                        userOverdueBooks.size(),
-                        userOverdueCDs.size(),
-                        totalFines
-                );
+            String message = String.format(
+                    "Dear %s,\n\nYou have:\n- %d overdue book(s)\n- %d overdue CD(s)\nTotal fines: $%.2f\n\nPlease return them.\n\nLibrary System",
+                    user.getName(), userOverdueBooks.size(), userOverdueCDs.size(), totalFines
+            );
 
-                if (notificationService.sendEmail(user.getEmail(), "📚💿 Library Overdue Items Reminder", message)) {
-                    sentCount++;
-                    System.out.println(SENT_PREFIX + "combined reminder to: " + user.getEmail());
-                }
+            if (notificationService.sendEmail(user.getEmail(), "📚💿 Combined Reminder", message)) {
+                sentCount++;
+                LOGGER.info(SENT_PREFIX + "combined reminder to: " + user.getEmail());
             }
         }
 
-        System.out.println(SENT_PREFIX + sentCount + " combined reminders.");
+        LOGGER.info(SENT_PREFIX + sentCount + " combined reminders.");
         return sentCount;
     }
 
-    /**
-     * Send return reminders for books due soon
-     */
+    // ============================================
+    // Return Reminders
+    // ============================================
     public int sendReturnReminders(int daysBefore) {
         List<Loan> activeLoans = loanRepository.findAll()
-                .stream()
-                .filter(loan -> !loan.isReturned())
-                .collect(java.util.stream.Collectors.toList());
+                .stream().filter(l -> !l.isReturned()).toList();
 
         int sentCount = 0;
-        java.time.LocalDateTime reminderDate =
-                java.time.LocalDateTime.now().plusDays(daysBefore);
+
+        var reminderDate = java.time.LocalDateTime.now().plusDays(daysBefore);
 
         for (Loan loan : activeLoans) {
-            if (loan.getDueDateTime().isBefore(reminderDate) ||
-                loan.getDueDateTime().isEqual(reminderDate)) {
+            if (!loan.getDueDateTime().isBefore(reminderDate)
+                    && !loan.getDueDateTime().isEqual(reminderDate)) continue;
 
-                User user = userRepository.findById(loan.getUserId());
-                if (user != null && user.isActive()) {
+            User user = userRepository.findById(loan.getUserId());
+            if (user != null && user.isActive()) {
 
-                    String bookTitle = "Book ID: " + loan.getBookId();
-                    String dueDate = loan.getDueDateTime().toString();
-
-                    if (notificationService.sendReturnReminder(user, bookTitle, dueDate)) {
-                        sentCount++;
-                        System.out.println(SENT_PREFIX + "return reminder to: " + user.getEmail());
-                    }
+                if (notificationService.sendReturnReminder(
+                        user,
+                        "Book ID: " + loan.getBookId(),
+                        loan.getDueDateTime().toString()
+                )) {
+                    sentCount++;
+                    LOGGER.info(SENT_PREFIX + "return reminder to: " + user.getEmail());
                 }
             }
         }
 
-        System.out.println(SENT_PREFIX + sentCount + " return reminders.");
+        LOGGER.info(SENT_PREFIX + sentCount + " return reminders.");
         return sentCount;
     }
 
-    /** Welcome email */
+    // ============================================
+    // Small Notifications
+    // ============================================
     public boolean sendWelcomeNotification(User user) {
         return notificationService.sendWelcomeEmail(user, null);
     }
 
-    /** Payment confirmation */
     public boolean sendPaymentNotification(User user, double paymentAmount, double remainingBalance) {
         return notificationService.sendPaymentConfirmation(user, paymentAmount, remainingBalance);
     }
 
-    /** Test email config */
+    // ============================================
+    // Email Configuration Test
+    // ============================================
     public boolean testEmailConfiguration(String testEmail) {
-        System.out.println("Testing email configuration...");
+
+        LOGGER.info("Testing email configuration...");
 
         if (!notificationService.isRealMode()) {
-            System.out.println("Currently in MOCK mode. Switching to REAL mode for test.");
+            LOGGER.info("Currently in MOCK mode. Switching to REAL mode...");
             notificationService.setRealMode(true);
         }
 
         boolean success = notificationService.sendEmail(
                 testEmail,
                 "Library System Test Email",
-                "This is a test email from Library Management System."
+                "This is a test email."
         );
 
-        if (success) {
-            System.out.println("✅ Email configuration test PASSED");
-        } else {
-            System.out.println("❌ Email configuration test FAILED");
-        }
+        LOGGER.info(success ?
+                "Email configuration test PASSED" :
+                "Email configuration test FAILED"
+        );
 
         return success;
     }
